--- a/Week3.ipynb
+++ b/Week3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPTI5hsvRlAKw6zvVtPm5/J",
+      "authorship_tag": "ABX9TyPw1pGYSnD52J5Lh/sRWyzA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -123,7 +123,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "**TUGAS PRAKTIKUM**"
+      ],
       "metadata": {
         "id": "1FMa93YY5bkk"
       }
@@ -147,7 +149,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 209
+          "height": 348
         },
         "id": "BXrqJK7gzEs2",
         "outputId": "a3abe605-826e-43a4-8621-34566b1a66df"
@@ -286,7 +288,6 @@
         "\n",
         "# a) Averaging\n",
         "print('Averaging')\n",
-        "print('---------')\n",
         "\n",
         "original = cv.imread('/content/drive/MyDrive/KTP_PCVK.jpg')\n",
         "grayscale_image = np.zeros(original.shape, original.dtype)\n",
@@ -307,19 +308,18 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 220
         },
         "id": "vDfsZ52yJyBC",
-        "outputId": "501f98a2-9967-45de-9a42-7d7d3c0d36be"
+        "outputId": "de6cdbff-6514-48da-a15e-2b816649c037"
       },
-      "execution_count": 26,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Averaging\n",
-            "---------\n"
+            "Averaging\n"
           ]
         },
         {
@@ -339,7 +339,6 @@
       "source": [
         "# b) Lightness\n",
         "print('Lightness')\n",
-        "print('---------')\n",
         "\n",
         "for y in range(original.shape[0]):\n",
         "  for x in range(original.shape[1]):\n",
@@ -355,19 +354,18 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 220
         },
         "id": "S4ZN78qFV_nA",
-        "outputId": "4e9f92b9-88c8-4ef2-f9ff-23753d4ee0e2"
+        "outputId": "47eb1a61-4c66-4790-da0f-cdda41e16955"
       },
-      "execution_count": 27,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Lightness\n",
-            "---------\n"
+            "Lightness\n"
           ]
         },
         {
@@ -387,7 +385,6 @@
       "source": [
         "# c) Luminance\n",
         "print('Luminance')\n",
-        "print('---------')\n",
         "\n",
         "for y in range(original.shape[0]):\n",
         "  for x in range(original.shape[1]):\n",
@@ -405,19 +402,18 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 220
         },
         "id": "LzzcMJRbWDYf",
-        "outputId": "f0f3eec7-a00f-4466-f325-38673fef4996"
+        "outputId": "1dd21c48-4cda-480d-fa8b-00cc2ecc7a2a"
       },
-      "execution_count": 28,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Luminance\n",
-            "---------\n"
+            "Luminance\n"
           ]
         },
         {
@@ -436,9 +432,6 @@
       "cell_type": "code",
       "source": [
         "# 5. Grayscale selain warna biru\n",
-        "\n",
-        "print('Ubah warna selain biru menjadi grayscale')\n",
-        "print('----------------------------------------')\n",
         "\n",
         "original = cv.imread('/content/drive/MyDrive/KTP_PCVK.jpg')\n",
         "grayscale_image = np.zeros(original.shape, original.dtype)\n",
@@ -463,21 +456,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 203
         },
         "id": "XDpM_sXyLgyA",
-        "outputId": "206d6928-983e-4d6e-a1f6-4a0adf94b253"
+        "outputId": "54849060-e1e9-48b2-c590-ef52f0043e1f"
       },
-      "execution_count": 25,
+      "execution_count": 33,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Ubah warna selain biru menjadi grayscale\n",
-            "----------------------------------------\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
